--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Шаурма меню</h1>
+    <p><input type="checkbox" checked disabled data-cost="30" data-kkal="75" class="menu">Лаваш</p>
+    <hr>
+    <h2>Наполнение</h2>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Сыр</p>
+    <p><input type="checkbox" checked data-cost="50" data-kkal="50" class="menu">Салат</p>
+    <p><input type="checkbox" checked data-cost="60" data-kkal="20" class="menu">Свиное мясо</p>
+    <p><input type="checkbox" checked data-cost="80" data-kkal="67" class="menu">Куриное мясо</p>
+    <hr>    
+    <h2>Соусы</h2>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Кетчуп</p>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Тартар</p>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Сычуанский соус</p>
+    <hr>
+    <h3>Итого:</h3>
     <script src="./js/script.js"></script>
 </body>
 </html>
