--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h2>Наполнение</h2>
     <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Сыр</p>
     <p><input type="checkbox" checked data-cost="50" data-kkal="50" class="menu">Салат</p>
-    <p><input type="checkbox" checked data-cost="60" data-kkal="20" class="menu">Свиное мясо</p>
-    <p><input type="checkbox" checked data-cost="80" data-kkal="67" class="menu">Куриное мясо</p>
+    <p><input type="checkbox" checked data-cost="60" data-kkal="210" class="menu">Свиное мясо</p>
+    <p><input type="checkbox" checked data-cost="80" data-kkal="180" class="menu">Куриное мясо</p>
     <hr>    
     <h2>Соусы</h2>
     <p><input type="checkbox" checked data-cost="10" data-kkal="10" class="menu">Кетчуп</p>
@@ -22,6 +22,7 @@
     <p><input type="checkbox" checked data-cost="20" data-kkal="35" class="menu">Сычуанский соус</p>
     <hr>
     <h3>Итого:</h3>
+    <p>Калорийность: <span id="kkal"></span> Цена: <span id="cost"></span></p>
     <script src="./js/script.js"></script>
 </body>
 </html>
