--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <h1>Шаурма меню</h1>
-    <p><input type="checkbox" checked disabled data-cost="20" data-kkal="75" class="menu">Лаваш</p>
+    <p><input type="checkbox" checked disabled data-cost="20" data-kkal="75" class="menu">Лаваш     (20руб)</p>
     <hr>
     <h2>Наполнение</h2>
-    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Сыр</p>
-    <p><input type="checkbox" checked data-cost="50" data-kkal="50" class="menu">Салат</p>
-    <p><input type="checkbox" checked data-cost="60" data-kkal="210" class="menu">Свиное мясо</p>
-    <p><input type="checkbox" checked data-cost="80" data-kkal="180" class="menu">Куриное мясо</p>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="100" class="menu">Сыр     (20руб)</p>
+    <p><input type="checkbox" checked data-cost="50" data-kkal="50" class="menu">Салат     (50руб)</p>
+    <p><input type="checkbox" checked data-cost="60" data-kkal="210" class="menu">Свиное мясо     (60руб)</p>
+    <p><input type="checkbox" checked data-cost="80" data-kkal="180" class="menu">Куриное мясо     (80руб)</p>
     <hr>    
     <h2>Соусы</h2>
-    <p><input type="checkbox" checked data-cost="10" data-kkal="10" class="menu">Кетчуп</p>
-    <p><input type="checkbox" checked data-cost="20" data-kkal="12" class="menu">Тартар</p>
-    <p><input type="checkbox" checked data-cost="20" data-kkal="35" class="menu">Сычуанский соус</p>
+    <p><input type="checkbox" checked data-cost="10" data-kkal="10" class="menu">Кетчуп     (10руб)</p>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="12" class="menu">Тартар     (20руб)</p>
+    <p><input type="checkbox" checked data-cost="20" data-kkal="35" class="menu">Сычуанский соус     (20руб)</p>
     <hr>
     <h3>Итого:</h3>
     <p>Калорийность: <span id="kkal"></span> Цена: <span id="cost"></span></p>
+    <button id="result">Счет</button>
     <script src="./js/script.js"></script>
 </body>
 </html>
