--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Меню</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Шаурма меню</h1>
@@ -24,6 +25,28 @@
     <h3>Итого:</h3>
     <p>Калорийность: <span id="kkal"></span> Цена: <span id="cost"></span></p>
     <button id="result">Счет</button>
+    <hr>
+    <h1>Напитки</h1>
+    <hr>
+    <h2>Гозированные</h2>
+    <p><input type="checkbox" checked data-costn="40" data-kkall="100" class="menun">Кока-кола холодная 0.33л.     (40руб)</p>
+    <p><input type="checkbox" checked data-costn="60" data-kkall="100" class="menun">Кока-кола 0.33л.    (60руб)</p>
+    <p><input type="checkbox" checked data-costn="50" data-kkall="90" class="menun">Мохито 0.33л.     (50руб)</p>
+    <p><input type="checkbox" checked data-costn="40" data-kkall="90" class="menun">Пепси 0.33л.     (40руб)</p>
+    <p><input type="checkbox" checked data-costn="30" data-kkall="75" class="menun">Лимонад 0.33л.     (30руб)</p>
+    <hr>
+    <h2>Горячие</h2>
+    <h3>Кофе</h3>
+    <p><input type="checkbox" checked data-costn="300" data-kkall="300" class="menun">Капучино большой 0.3л.     (300руб)</p>
+    <p><input type="checkbox" checked data-costn="200" data-kkall="200" class="menun">Капучино средний 0.2л.     (200руб)</p>
+    <p><input type="checkbox" checked data-costn="100" data-kkall="100" class="menun">Капучино маленький 0.15л.     (100руб)</p>
+    <hr>
+    <h3>Чай</h3>
+    <p><input type="checkbox" checked data-costn="50" data-kkall="30" class="menun">Чай 0.15л.     (50руб)</p>
+    <hr>
+    <h3>Итого:</h3>
+    <p>Калорийность: <span id="kkall"></span> Цена: <span id="costn"></span></p>
+    <button id="resultn">Счет</button>
     <script src="./js/script.js"></script>
 </body>
 </html>
